--- a/app/globals.css
+++ b/app/globals.css
@@ -3,24 +3,44 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --secondary-blue: #00eeff;
+  --primary-blue: #2823c0;
+  --white: #ffffff;
+  --black: #000000;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --border-color: var(--secondary-blue);
+
+  --font-inter: var(--font-inter);
+  --font-merriweather: var(--font-merriweather);
+  --font-fira: var(--font-fira);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #232323;
+    --foreground: #ffffff;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter);
+}
+
+/* Fonts */
+.fira-font {
+  font-family: var(--font-fira);
+}
+
+.inter-font {
+  font-family: var(--font-inter);
+}
+
+.merriweather-font {
+  font-family: var(--font-merriweather);
 }
