--- a/app/globals.css
+++ b/app/globals.css
@@ -92,6 +92,10 @@ body {
   @apply bg-(--secondary-blue) text-(--primary-blue) hover:bg-(--primary-blue) hover:text-(--secondary-blue) rounded-[10px] p-2 h-fit cursor-pointer;
 }
 
+.buttonInverted {
+  @apply bg-(--primary-blue) text-(--secondary-blue) hover:bg-(--secondary-blue) hover:text-(--primary-blue) rounded-[10px] p-2 h-fit cursor-pointer;
+}
+
 /* Draftify Styles */
 .logo-text {
   @apply bg-gradient-to-br from-blue-800 to-purple-500 bg-clip-text text-transparent;
